# pdf-student

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  result  rustfmt.toml  stable-rust-shell.nix
src/: book_info_window.rs  contents_tree.rs  druid-help.rs  find_goto_controllers.rs  main.rs  pdf_text_widget.rs  pdf_view.rs  preferences.rs  scrapped 2021-02-10.rs  scrapped 2021-02-18.rs  scrollbar_widget.rs
